# phonetical

./: README.md  phonetical.cabal
src/Data/Text/: Phonetical.hs  Phonetical.hs~
src/Data/Text/Phonetical/: Internal.hs  Internal.hs~
test/Data/Text/: PhoneticalSpec.hs  PhoneticalSpec.hs~
