Name:                   phonetical
Version:                0.1.0
Author:                 Scott <scott.murphy@plowtech.net>
Maintainer:             Scott <scott.murphy@plowtech.net>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Data.Text.Phonetical
  Other-Modules:        Data.Text.Phonetical.Internal
  Build-Depends:        base >= 4 && < 5
                      , attoparsec >= 0.12.1 
                      , aeson
                      , text                      
                      , bytestring

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , attoparsec
                      , text 
                      , aeson                     
                      , bytestring

Source-Repository head
  Type:                 git
--  Location:             
